--- a/src/lithium/supmat/coop/coop.tex
+++ b/src/lithium/supmat/coop/coop.tex
@@ -438,8 +438,7 @@ And we finally got
 	W_1 \vec{E}_1  \simeq E_{00} \mymat{M}_1  \mymat{\Delta}_A \vec{C}
 \end{equation}
 
-\subsection{Using Mass Conservation}
-\subsubsection{Computing the Entry Level}
+\subsection{Using Mass Conservation to compute the Entry Layer}
 We replace:
 \begin{equation}
 \left\lbrace
@@ -474,16 +473,19 @@ We define
 \right.
 \end{equation}
 
-\subsubsection{Rates}
+\subsection{Expressing the Rates}
 We deduce the rate for the for involved species:
 \begin{equation}
 \left\lbrace
 \begin{array}{rcl}
-\partial_t \Li{x} & = & E_{00}<\vec{C}|\mymat{G}_x|\mymat{M}_1\mymat{\Delta}_A|\vec{C}> \proton+ k_x\left(\Theta \LiOut{x} - \Li{x}\right)\\
- & = & E_{00} \proton \left( <\vec{L}_x|\vec{C}> + <\vec{C}|\mymat{Q}_x|\vec{C}>\right) \LiOut{x}+ k_x\left(\Theta \LiOut{x} - \Li{x}\right)\\
+\partial_t \Li{x} & = & \dfrac{E_{00}}{W_1}<\vec{C}|\mymat{G}_x|\mymat{M}_1\mymat{\Delta}_A|\vec{C}> \proton+ k_x\left(\Theta \LiOut{x} - \Li{x}\right)\\
+\\
+ & = & \dfrac{E_{00}}{W1} \proton \left( <\vec{L}_x|\vec{C}> + <\vec{C}|\mymat{Q}_x|\vec{C}>\right) \LiOut{x}+ k_x\left(\Theta \LiOut{x} - \Li{x}\right)\\
+ \\
  \\
  \partial_t E_{xH} & = & <\vec{C}|\mymat{G}_6|\vec{E}_1> \proton - k_x^h E_{xH}\\
- & = & E_{00} \proton \left( <\vec{L}_x|\vec{C}> + <\vec{C}|\mymat{Q}_x|\vec{C}>\right) \LiOut{x} - k_x^h E_{xH} \\
+ \\
+ & = & \dfrac{E_{00}}{W_1} \proton \left( <\vec{L}_x|\vec{C}> + <\vec{C}|\mymat{Q}_x|\vec{C}>\right) \LiOut{x} - k_x^h E_{xH} \\
 \end{array}
 \right.
 \end{equation}
@@ -491,8 +493,9 @@ We now write the adimensional variable rates:
 \begin{equation}
 \left\lbrace
 \begin{array}{rcl}
-	\partial_t \beta_x & = & \proton \left( <\vec{L}_x|\vec{C}> + <\vec{C}|\mymat{Q}_x|\vec{C}> \right)  E_{00} + k_x \left(\Theta - \beta_x\right)\\
-	\partial_t \alpha_{xH} & = & \alpha_{00} \proton \left( <\vec{L}_x|\vec{C}> + <\vec{C}|\mymat{Q}_x|\vec{C}>\right) \LiOut{x} - k_x^h \alpha_{xH}\\
+	\partial_t \beta_x & = & \proton \left( <\vec{L}_x|\vec{C}> + <\vec{C}|\mymat{Q}_x|\vec{C}> \right)  \dfrac{E_{00}}{W_1} + k_x \left(\Theta - \beta_x\right)\\
+	\\
+	\partial_t \alpha_{x} & = &  \dfrac{E_{00}}{\mathsf{E}W_1} \proton \left( <\vec{L}_x|\vec{C}> + <\vec{C}|\mymat{Q}_x|\vec{C}>\right) \LiOut{x} - k_x^h \alpha_{x}\\
 \end{array}
 \right.
 \end{equation}
@@ -502,10 +505,10 @@ and finally:
 \left\lbrace
 \begin{array}{rcl}
 	\partial_t \beta_x & = & 
-	\mathsf{E}\proton \dfrac{W_1}{W_1+W_3} \left[1-(\alpha_{6H}+\alpha_{7H})\right] \left( <\vec{L}_x|\vec{\epsilon}> \LiAllOut + <\vec{\epsilon}|\mymat{Q}_x|\vec{\epsilon}>\LiAllOut^2\right) 
+	\dfrac{\mathsf{E}\proton}{W_1+W_3} \left[1-(\alpha_{6H}+\alpha_{7H})\right] \left( <\vec{L}_x|\vec{\epsilon}> \LiAllOut + <\vec{\epsilon}|\mymat{Q}_x|\vec{\epsilon}>\LiAllOut^2\right) 
 	+ k_x \left(\Theta - \beta_x\right)\\
 	\\
-	\partial_t \alpha_{xH} & = &  \epsilon_x \LiAllOut \proton \dfrac{W_1}{W_1+W_3} \left[1-(\alpha_{6H}+\alpha_{7H})\right] \left( <\vec{L}_x|\vec{\epsilon}> \LiAllOut + <\vec{\epsilon}|\mymat{Q}_x|\vec{\epsilon}>\LiAllOut^2\right) 
+	\partial_t \alpha_{x} & = &  \epsilon_x  \dfrac{\LiAllOut \proton}{W_1+W_3} \left[1-(\alpha_{6H}+\alpha_{7H})\right] \left( <\vec{L}_x|\vec{\epsilon}> \LiAllOut + <\vec{\epsilon}|\mymat{Q}_x|\vec{\epsilon}>\LiAllOut^2\right) 
 	- k_x^h \alpha_{xH}
 	\\
 	\\
