--- a/src/lithium/supmat/coop/coop.tex
+++ b/src/lithium/supmat/coop/coop.tex
@@ -527,9 +527,9 @@ We observe that:
 so, morphologically, the two-layers model shall produce the same curves than the one-layer model.
 But if we evaluate:
 \begin{equation}
-	\left.\dfrac{\beta_7}{\beta_7}\right\vert_\varnothing = 
-	\dfrac{ \dfrac{\mathsf{N}_7(\LiAllOut)}{1+\mathsf{D}(\LiAllOut)}+k_7 \Theta}
-	{  \dfrac{\mathsf{N}_6(\LiAllOut)}{1+\mathsf{D}(\LiAllOut)} +k_6 \Theta}
+	\left.\dfrac{\beta_7}{\beta_6}\right\vert_\varnothing = 
+	\dfrac{ \dfrac{\mathsf{E}\proton\mathsf{N}_7(\LiAllOut)}{1+\mathsf{D}(\LiAllOut)}+k_7 \Theta}
+	{  \dfrac{\mathsf{E}\proton\mathsf{N}_6(\LiAllOut)}{1+\mathsf{D}(\LiAllOut)} +k_6 \Theta}
 \end{equation}
 where
 \begin{itemize}
@@ -583,211 +583,45 @@ We also assume that:
 \end{itemize}
 
 \subsection{New expressions}
-
+We obtain:
 \begin{equation}
 \vec{L}_7 = i_7 u_7^2 
+\underbrace{
 \begin{bmatrix}
 	\kappa \rho \\
 	1\\
-\end{bmatrix} =  i_7 u_7^2 \vec{L}',\;\;
+\end{bmatrix}}_{\vec{L}'} ,\;\;
 \mymat{Q_7} = \dfrac{i_7u^3}{1+\rho} |\vec{L}'><\vec{L}'|,\;\; \vec{L}_6 = \kappa \vec{L}_7, \;\; \mymat{Q}_6 = \kappa \mymat{Q}_7
 \end{equation}
 and
 \begin{equation}
 	\vec{L}_w = \dfrac{u_7}{1+\rho} \vec{L}',\;\;
-	\vec{L}_3 = u_7 \begin{bmatrix} \kappa \\ 1 \\ \end{bmatrix},\;\;
-	\mymat{Q}_3 = u_7^2 
+	\vec{L}_3 = u_7 \underbrace{\begin{bmatrix} \kappa \\ 1 \\ \end{bmatrix}}_{\vec{\tilde{L}}},\;\;
+	\mymat{Q}_3 = u_7^2
+	\underbrace{ 
 	\begin{bmatrix}
 	\dfrac{2\rho+1}{\rho+1} \kappa^2 & \kappa \\
 	\kappa & \dfrac{\rho+2}{\rho+1}\\
 	\end{bmatrix}
+	}_{\mymat{\tilde{Q}}}
+\end{equation}
+and we have the simplified expressions:
+\begin{equation}
+\left\lbrace
+\begin{array}{rcl}
+W_1 & = & 1 + \dfrac{\left(u_7\LiAllOut\right)}{1+\rho} <\vec{L}'|\vec{\epsilon}>\\
+\\
+W_3 & = & \left(u_7\LiAllOut\right) <\vec{\tilde{L}}|\vec{\epsilon}> + \left(u_7\LiAllOut\right)^2 <\vec{\epsilon}|\mymat{\tilde{Q}}|\vec{\epsilon}> + \left(u_7\LiAllOut\right)^3 \tilde{Z}_3\\
+\\
+\tilde{Z}_3 & = & \dfrac{1}{1+\rho} \left[ \epsilon_7^3 + (1+\rho) \left[ \epsilon_7^2\left(\kappa\epsilon_6\right) +  \epsilon_7\left(\kappa\epsilon_6\right)^2 \right]+ \rho \left(\kappa \epsilon_6\right)^3\right] \\
+\\
+\mathsf{N}_7 & = & i_7 u_7  \left[ \left(u_7\LiAllOut\right) <\vec{L}'|\vec{\epsilon}> + \dfrac{1}{1+\rho} \left(u_7\LiAllOut\right)^2 <\vec{L}'|\vec{\epsilon}>^2 \right]\\
+\\
+\mathsf{N}_6 & = & \kappa \mathsf{N}_7\\
+\end{array}
+\right.
 \end{equation}
 
 \end{document}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-and
-\begin{equation}
-\boxed{
-\begin{array}{rcl}
-	E_{00} & = & \dfrac{W_1 \mathsf{E} - <\vec{P_1} + \mytrn{\mymat{F}} \vec{C}| \left( \mymat{D}_0^{-1} \mymat{M}_1' \mymat{R}_H \right) | \vec{E}_H> }
-	{ W_1+\underbrace{<\vec{P_1} + \mytrn{\mymat{F}} \vec{C}| \underbrace{\left( \mymat{D}_0^{-1} \mymat{M}_1' \mymat{A}_0 \right)}_{\mymat{M}_0} | \vec{C}>}_{W_3}} \\
-	\\
-	\alpha_{00} & = & \dfrac{W_1   - <\vec{P_1} + \mytrn{\mymat{F}} \vec{C}| \left( \mymat{D}_0^{-1} \mymat{M}_1' \mymat{R}_H \right) | \vec{\alpha}_H> }
-	{ W_1+ W_3 }\\
-\end{array}
-}
-\end{equation}
-
-\begin{equation}
-\partial_t \Li{x} = \mathsf{E} <\vec{C}|\mymat{G}_x|\vec{\alpha}_1> \proton+ k_x\left(\Theta \LiOut{x} - \Li{x}\right)\\
-\end{equation}
-
-......
-In particular
-\begin{equation}
-	E_{00}^\varnothing = \dfrac{W_1 \mathsf{E}}{W_1+W_3}
-\end{equation}
-and
-\begin{equation}
-\left\lbrace
-\begin{array}{rcl}
-	W_1 \vec{E}_1^\varnothing & = & E_{00}^\varnothing  \mymat{M}_0 \vec{C}\\
-	\\
-	\vec{E}_1^\varnothing     & = & \dfrac{\mathsf{E}}{W_1+W_3}\mymat{M}_0 \vec{C}\\
-\end{array}
-\right.
-\end{equation}
-We deduce
-\begin{equation}
-	E_{xy}^\varnothing = \dfrac{\mathsf{E}}{W_1+W_3} <\vec{C}|\mymat{F}_{xy}\mymat{M}_0|\vec{C}>
-\end{equation}
-and
-\begin{equation}
-\left\lbrace
-\begin{array}{rcl}
-	\partial_t \Li{x}^\varnothing & = & <\vec{C}|\mymat{G}_x|\vec{E}_1^\varnothing> \proton_0 + k_x \Theta \myout{\Li{x}}\\
-	\\
-	 & = & \dfrac{\mathsf{E}\proton_0}{W_1+W_3} <\vec{C}|\mymat{G}_x|\mymat{M}_0|\vec{C}> + k_x \Theta \myout{\Li{x}}\\
-	 \\
-	 & = & \dfrac{\mathsf{E}\proton_0}{W_1+W_3} \left( <\vec{C}|\mymat{Q}_x|\vec{C}> + <\vec{L}_x|\vec{C}>\right)\myout{\Li{x}} + k_x \Theta \myout{\Li{x}}  \\
-\end{array}
-\right.
-\end{equation}
-so that
-\begin{equation}
-\left\lbrace
-\begin{array}{rcl}
-\partial_t \beta_x^\varnothing & = & \dfrac{\mathsf{E}\proton_0}{W_1+W_3} \left( <\vec{C}|\mymat{Q}_x|\vec{C}> + <\vec{L}_x|\vec{C}>\right) + k_x \Theta \\
-\\
-& = & \mathsf{E}\proton_0 \dfrac{\mathsf{N}_x(\LiAllOut)}{1+\mathsf{D}(\LiAllOut)} + k_x \Theta \\
-\end{array}
-\right.
-\end{equation}
-where 
-\begin{itemize}
-\item ${\mathsf{N}_6}$ and  ${\mathsf{N}_7}$ are  {\bf second} order polynomials without constant term
-\item ${\mathsf{D}}$ is a {\bf third } order polynomial without constant term
-\end{itemize}
-Finally:
-\begin{equation}
-\left.\dfrac{\beta_7}{\beta_6}\right\vert_{\varnothing} = 
-\dfrac{
-\mathsf{E}\proton_0 \dfrac{\mathsf{N}_7(\LiAllOut)}{1+\mathsf{D}(\LiAllOut)} + k_7 \Theta 
-}
-{
-\mathsf{E}\proton_0 \dfrac{\mathsf{N}_6(\LiAllOut)}{1+\mathsf{D}(\LiAllOut)} + k_6 \Theta 
-}
-\end{equation}
-
-We compute:
-\begin{equation}
-	\vec{L}_7  = i_7 u_7^2 
-	\underbrace{
-	\begin{bmatrix}
-	D\kappa\\
-	1
-	\end{bmatrix}
-	}_{\vec{L}}
-	\\,
-	\;\;\vec{L}_6 = \kappa \cdot \vec{L}_7
-\end{equation}
-and
-\begin{equation}
-\mymat{Q}_7 = \dfrac{i_7 u_7^3}{1+\rho}
-\begin{bmatrix}
-	\rho^2 \kappa^2 & \rho\kappa \\
-	\rho\kappa      & 1\\
-\end{bmatrix}
-= \dfrac{i_7 u_7^3}{1+\rho} \vec{L} \mytrn{\vec{L}},\;\; \mymat{Q_6} = \kappa \mymat{Q}_7
-\end{equation}
-so that
-\begin{equation}
-\left\lbrace
-\begin{array}{rcl}
-\mathsf{N}_7 & = & <\vec{C}|\mymat{Q}_7|\vec{C}> + <\vec{L}_7|\vec{C}> \\
-\\
- & = & i_7 u_7^2  <\vec{L}|\vec{C}> \left[ 1 + \dfrac{u_7}{1+\rho}  <\vec{L}|\vec{C}> \right]\\
- \\
- & = & i_7 \left[  u_7^2  <\vec{L}|\vec{C}> + \dfrac{u_7^3}{1+\rho} <\vec{L}|\vec{C}>^2 \right]\\
- \\
-\mathsf{N}_6 & = & \kappa \; \mathsf{N}_7
-\end{array} 
-\right.
-\end{equation}
-And with
-\begin{equation}
-\left\lbrace
-\begin{array}{rcl}
-\vec{L}_d & = &
-\begin{bmatrix}
-(2\rho+1) \kappa\\
-(\rho+1)
-\end{bmatrix}\\
-\\
-\mymat{Q}_d & =  &
-\begin{bmatrix}
-(2\rho+1)\kappa^2 & (\rho+1)\kappa \\
-(\rho+1) \kappa   & (\rho+2)  \\
-\end{bmatrix}\\
-\\
-T_d & = & C_7^3 + (1+\rho)[C_7^2(\kappa C_6)+C_7(\kappa C_6)^2] + \rho (\kappa C_6)^3 \\
-\end{array}
-\right.
-\end{equation}
-we get
-\begin{equation}
-	\mathsf{D} = \dfrac{1}{1+\rho} \left[ u_7 <\vec{C}|\vec{L}_d> + u_7^2 <\vec{C}|\mymat{Q}_d|\vec{C}> + u_7^3 T_d \right]
-\end{equation}
-
-\subsection{Effect of external Lithium}
-\subsubsection{Compact Expressions}
-We obtain, using \eqref{eq:C}:
-\begin{equation}
-\left\lbrace
-\begin{array}{rcl}
-	\mathsf{N}_7(\LiAllOut) & = & i_7u_7 \left[ <\vec{L}|\vec{\epsilon}> (u_7\LiAllOut) +  \dfrac{\left(u_7\LiAllOut\right)^2}{1+\rho}  <\vec{L}|\vec{\epsilon}>^2 \right]\\
-	\mathsf{D}(\LiAllOut)   & = & \dfrac{1}{1+\rho} \left[ <\vec{L}_d|\vec{\epsilon}> (u_7\LiAllOut) + <\vec{\epsilon}|\mymat{Q}_d|\vec{\epsilon}>\left(u_7\LiAllOut\right)^2 
-	+  T_\epsilon \left(u_7\LiAllOut\right)^3\right]\\
-\end{array}
-\right.
-\end{equation}
-
-and
-
-\begin{equation}
-\left.\dfrac{\beta_7}{\beta_6}\right\vert_{\varnothing} = 
-\dfrac{
-	\left(\mathsf{E}\proton_0 \dfrac{\mathsf{N}_7(\LiAllOut)}{1+\mathsf{D}(\LiAllOut)}\right) + k_7 \Theta 
-}
-{
-	\kappa \left(\mathsf{E}\proton_0 \dfrac{\mathsf{N}_7(\LiAllOut)}{1+\mathsf{D}(\LiAllOut)}\right) + \sigma k_7 \Theta 
-}
-\end{equation}
-
-
-\subsubsection{Effect Evaluation}
-For a $\spLi{7}$ dominant solution and $\rho\approx1$, we get
-\begin{equation}
-\left\lbrace
-\begin{array}{rcl}
-	\widetilde{\mathsf{N}}_7(\LiAllOut) & = &  {i_7 u_7}  \left[ \left(u_7\LiAllOut\right) + \dfrac{1}{2} \left(u_7\LiAllOut\right)^2\right]\\
-	\\
-	\widetilde{\mathsf{D}}(\LiAllOut)   & = & \dfrac{3}{2} \left[  \left(u_7\LiAllOut\right) + \left(u_7\LiAllOut\right)^2 + \dfrac{1}{3} \left(u_7\LiAllOut\right)^3 \right] \\
-\end{array}
-\right.
-\end{equation}
-and we obtain:
-\begin{equation}
-	\dfrac{\widetilde{\mathsf{N}}_7(\LiAllOut)}{1+\widetilde{\mathsf{D}}(\LiAllOut)} =  {i_7 u_7} \dfrac{X}{1+X+X^2},\;\; X=C_0u_7
-\end{equation}
-
-\begin{center}
-	\includegraphics[width=0.5\textwidth]{f.png}
-\end{center}
-This means that for $X\ll 1$, or $C_0\ll\dfrac{1}{u_7}$, an increase in concentration will decrease the initial ratio, which is never the case when dealing with
-the 1-layer expression stated in equation \eqref{eq:level1}.
-
-\end{document}
 
