--- a/src/lithium/supmat/coop/coop.tex
+++ b/src/lithium/supmat/coop/coop.tex
@@ -78,7 +78,7 @@ We define:
 \begin{equation}
 	\LiAll = \Li{6}+\Li{7}
 \end{equation}
-and we got the relations:
+and we obtain the relations:
 \begin{equation}
 \left\lbrace
 \begin{array}{rcl}
@@ -127,7 +127,7 @@ The two species $\spLi{6}$ and $\spLi{7}$ that may leak through the membrane by 
 \end{array}
 \right.
 \end{equation}
-According to the GHK theory, $k_6$ and $k_7$ are the whole cell permeability to $\spLi{6}$ and $\spLi{7}$ respectively,
+According to the GHK theory, both $k_6$ and $k_7$ are the whole cell permeability to $\spLi{6}$ and $\spLi{7}$ respectively,
 and should depend on the potential. But in any case, this permeability arises from a diffusive process, and we expect the ratio to be constant:
 \begin{equation}
 	\dfrac{k_6}{k_7} \simeq \sigma = 1.00229
